# py-laba3

./: .pre-commit-config.yaml  README.md  pyproject.toml
src/: constants.py  main.py
src/algos/: factorial.py  fibonacci.py
src/sorts/: bubble_sort.py  bucket_sort.py  counting_sort.py  heap_sort.py  insertion_sort.py  quick_sort.py  radix_sort.py
src/structs/: queue.py  stack.py
src/utils/: generators.py
tests/: test_bubble_sort.py  test_bucket_sort.py  test_counting_sort.py  test_factorial.py  test_fibonacci.py  test_heap_sort.py  test_insertion_sort.py  test_queue.py  test_quick_sort.py  test_radix_sort.py  test_stack.py
